--- a/src/assets/scss/now-ui-dashboard.css
+++ b/src/assets/scss/now-ui-dashboard.css
@@ -1536,7 +1536,8 @@ html body {
   /*top margin*/
   /*bottom margin*/
   /*left margin*/
-  /*right margin*/ }
+  /*right margin*/
+  /***** Scroll bar styles *****/ }
   html body .color-dark-grey {
     color: #555 !important; }
   html body .color-light-grey {
@@ -1806,6 +1807,22 @@ html body {
     border: 1px solid black; }
   html body .test2 {
     border: 1px solid red; }
+  html body .scrollbar::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #F0F2F5; }
+  html body .scrollbar::-webkit-scrollbar {
+    width: 5px;
+    border-radius: 5px;
+    background-color: #F5F5F5; }
+  html body .scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(155, 155, 155, 0.5);
+    transition: .5s all;
+    border-radius: 5px;
+    opacity: 0; }
+    html body .scrollbar::-webkit-scrollbar-thumb:hover {
+      opacity: 1;
+      background-color: #9b9b9b;
+      transition: .5s all; }
 
 .navbar {
   padding-top: 0.625rem;
