--- a/src/assets/scss/now-ui-dashboard/_margin-pading-framwork-styles.scss
+++ b/src/assets/scss/now-ui-dashboard/_margin-pading-framwork-styles.scss
@@ -577,4 +577,32 @@ html body {
     border: 1px solid red;
   }
 
+
+  /***** Scroll bar styles *****/
+
+  .scrollbar::-webkit-scrollbar-track {
+    //border: 1px solid black;
+    border-radius: 5px;
+    background-color: #F0F2F5;
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    width: 5px;
+    border-radius: 5px;
+    background-color: #F5F5F5;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(rgba(155, 155, 155, 1), .5);
+    transition: .5s all;
+    border-radius: 5px;
+    opacity: 0;
+
+    &:hover {
+      opacity: 1;
+      background-color: rgba(155, 155, 155, 1);
+      transition: .5s all;
+    }
+  }
+
 }
