--- a/src/views/Log-in/Log-in.scss
+++ b/src/views/Log-in/Log-in.scss
@@ -1,17 +1,97 @@
+@import "../../assets/scss/light-theme";
+@import "../../assets/scss/dark-theme";
+@import "../../assets/scss/style-utilities";
+
 .log-in-view-container {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-between;
+
   & > div {
     width: 50%;
   }
+
+  .log-in-and-sign-up-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .intro-section {
+    width: 100%;
+    margin-top: 10%;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+      width: 8%;
+    }
+
+    h3 {
+      margin-top: 10px;
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+  }
+
+  .change-theme-container {
+    margin-top: auto;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: center;
+
+    .themes {
+      display: flex;
+
+      & > div {
+        height: 25px;
+        width: 25px;
+        margin: 10px 10px 0;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
+      .dark {
+        background-color: $dt-darkColor;
+        border: 1px solid $dt-lightColor;
+      }
+
+      .light {
+        background-color: $lt-lightColor;
+        border: 1px solid $lt-darkColor;
+      }
+    }
+  }
 }
+
+@each $theme in $themes {
+  #root.#{$theme} {
+    @if $theme == dark-theme {
+      background-color: $dt-semiDarkColor;
+      .intro-section {
+        background-color: $dt-semiDarkColor;
+
+        h3 {
+          color: $dt-lightColor;
+        }
+      }
+      .change-theme-container {
+        background-color: $dt-semiDarkColor;
+      }
+    }
+  }
+}
+
 
 @media screen and (max-width: 426px) {
   .log-in-view-container {
     & > div {
       width: 100%;
+
       &:first-child {
         display: none;
       }
