--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -26,6 +26,15 @@ html {
       }
     }
 
+
+    button {
+      i.fas.fa-circle-notch.fa-spin.fa-fw {
+        font-size: 15px !important;
+        position: absolute;
+        right: 10px;
+      }
+    }
+
     #root {
       height: 100%;
 
@@ -56,34 +65,9 @@ html {
         text-decoration: none;
       }
 
-      button {
-        i.fas.fa-circle-notch.fa-spin.fa-3x.fa-fw {
-          font-size: 1.2em;
-          position: absolute;
-          right: 10px;
-        }
-      }
-
       @each $theme in $themes {
         &.#{$theme} {
           @if $theme == dark-theme {
-            .sidebar {
-              background-color: $dt-semiDarkColor;
-            }
-
-            .navbar {
-              background-color: $dt-semiDarkColor;
-
-              * {
-                color: $dt-lightColor;
-              }
-            }
-
-            .p-paginator {
-              background-color: $dt-semiDarkColor !important;
-              border: none;
-            }
-
             .input {
               color: $dt-lightColor;
 
@@ -93,9 +77,6 @@ html {
               }
             }
 
-            //.main-panel {
-            //  background-color: $dt-darkColor;
-
             .card {
               background-color: $lt-lightColor;
 
@@ -103,64 +84,7 @@ html {
                 color: $dt-semiDarkColor;
               }
             }
-            //}
           } @else {
-            .sidebar {
-              background-color: $lt-white;
-
-              li {
-                color: $secondaryColor;
-
-                .active {
-                  background-color: $lt-darkColor;
-
-                  p {
-                    color: $lt-midColor;
-                  }
-                }
-
-                p {
-                  color: $lt-darkColor;
-                }
-
-                a:hover {
-                  background-color: $lt-darkColor;
-
-                  p {
-                    color: $lt-midColor;
-                  }
-                }
-              }
-
-              .lang-and-theme {
-                select {
-                  color: $lt-darkColor !important;
-
-                  &:active,
-                  &:focus {
-                    border: 1px solid $lt-darkColor;
-
-                    option {
-                      color: black;
-                    }
-                  }
-                }
-              }
-            }
-
-            .navbar {
-              background-color: $lt-white;
-
-              * {
-                color: $lt-darkColor;
-              }
-            }
-
-            .p-paginator {
-              background-color: $lt-white !important;
-              border: none;
-            }
-
             .input {
               color: $lt-darkColor;
 
@@ -170,9 +94,6 @@ html {
               }
             }
 
-            //.main-panel {
-            //  background-color: $lt-lightColor;
-
             .card {
               background-color: $lt-white;
 
@@ -180,13 +101,22 @@ html {
                 color: $lt-darkColor;
               }
             }
-            //}
           }
         }
       }
 
       .table-responsive {
         overflow: auto;
+      }
+    }
+
+    textarea {
+      border-radius: 10px !important;
+      padding: 10px !important;
+      border: 1px solid rgb(227, 227, 227) !important;
+
+      &:focus {
+        border-color: #f96332 !important;
       }
     }
   }
