--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -5,3 +5,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center; }
+    .sign-up-form-container .buttons-container button {
+      width: 120px;
+      position: relative; }
