--- a/src/components/SignUpForm/SignUpForm.scss
+++ b/src/components/SignUpForm/SignUpForm.scss
@@ -6,5 +6,10 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    button {
+      width: 120px;
+      position: relative;
+    }
   }
 }
