--- a/src/views/Projects/Projects.css
+++ b/src/views/Projects/Projects.css
@@ -2,39 +2,8 @@
   display: flex;
   flex-direction: column;
   height: 100%; }
-  .projects-page-container .projects-page-header {
-    height: 7%;
-    display: flex;
-    align-items: center;
-    border-bottom: 3px solid #FF5C56;
-    flex-shrink: 1; }
-    .projects-page-container .projects-page-header .logo-and-title-container {
-      flex-grow: 1;
-      display: flex; }
-      .projects-page-container .projects-page-header .logo-and-title-container img {
-        width: 25px;
-        height: 25px; }
-    .projects-page-container .projects-page-header .change-theme-container {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: row-reverse;
-      align-items: center; }
-      .projects-page-container .projects-page-header .change-theme-container .themes {
-        display: flex; }
-        .projects-page-container .projects-page-header .change-theme-container .themes > div {
-          height: 25px;
-          width: 25px;
-          margin: 10px 10px 0;
-          border-radius: 50%;
-          cursor: pointer; }
-        .projects-page-container .projects-page-header .change-theme-container .themes .dark {
-          background-color: #000;
-          border: 1px solid #eee; }
-        .projects-page-container .projects-page-header .change-theme-container .themes .light {
-          background-color: #eee;
-          border: 1px solid #000; }
   .projects-page-container .projects-container {
-    height: 93%;
+    height: 100%;
     overflow-y: auto;
     display: flex;
     flex-wrap: wrap;
@@ -46,6 +15,20 @@
       width: 200px;
       height: 250px;
       margin: 10px; }
+    .projects-page-container .projects-container .add-new-project-button {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      background-color: #FF5C56;
+      outline: none;
+      border: none;
+      box-shadow: 0 5px 10px 5px rgba(39, 39, 39, 0.1);
+      position: absolute;
+      right: 20px;
+      bottom: 40px; }
+      .projects-page-container .projects-container .add-new-project-button i {
+        color: white;
+        font-size: 1.5em; }
 
 #root.dark-theme .projects-page-container .projects-page-header {
   background-color: #000;
