--- a/src/views/Projects/Projects.scss
+++ b/src/views/Projects/Projects.scss
@@ -7,58 +7,9 @@
   flex-direction: column;
   height: 100%;
 
-  .projects-page-header {
-    height: 7%;
-    display: flex;
-    align-items: center;
-    border-bottom: 3px solid $dt-midColor;
-    flex-shrink: 1;
-
-    .logo-and-title-container {
-      flex-grow: 1;
-      display: flex;
-
-      img {
-        width: 25px;
-        height: 25px;
-      }
-    }
-
-    .change-theme-container {
-      //margin-top: auto;
-      //width: 100%;
-      display: flex;
-      justify-content: space-between;
-      flex-direction: row-reverse;
-      align-items: center;
-
-      .themes {
-        display: flex;
-
-        & > div {
-          height: 25px;
-          width: 25px;
-          margin: 10px 10px 0;
-          border-radius: 50%;
-          cursor: pointer;
-        }
-
-        .dark {
-          background-color: $dt-darkColor;
-          border: 1px solid $dt-lightColor;
-        }
-
-        .light {
-          background-color: $lt-lightColor;
-          border: 1px solid $lt-darkColor;
-        }
-      }
-    }
-  }
-
   .projects-container {
     //flex-grow: 1;
-    height: 93%;
+    height: 100%;
     overflow-y: auto;
     display: flex;
     flex-wrap: wrap;
@@ -71,6 +22,24 @@
       width: 200px;
       height: 250px;
       margin: 10px;
+    }
+
+    .add-new-project-button {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      background-color: $dt-midColor;
+      outline: none;
+      border: none;
+      box-shadow: 0 5px 10px 5px rgba(39, 39, 39, 0.1);
+      position: absolute;
+      right: 20px;
+      bottom: 40px;
+
+      i {
+        color: white;
+        font-size: 1.5em;
+      }
     }
   }
 }
