updated files name

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,4 +1,4 @@
-@import "../scss/now-ui-dashboard.scss";
+@import "../scss/ui-component-syles";
 @import "../../assets/scss/dark-theme";
 @import "../../assets/scss/style-utilities";
 /*global styles*/
